--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@heroicons/react": "^2.1.5",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
+    "husky": "^9.1.5",
+    "lint-staged": "^15.2.9",
     "next": "15.0.0-rc.0",
     "next-auth": "5.0.0-beta.20",
     "react": "19.0.0-rc-f90a6bcc-20240827",
@@ -19,14 +21,22 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@eslint/js": "^9.9.1",
     "@types/bcrypt": "^5.0.2",
+    "@types/eslint__js": "^8.42.3",
     "@types/node": "^20",
     "@types/react": "npm:types-react@rc",
     "@types/react-dom": "npm:types-react-dom@rc",
-    "eslint": "^8",
+    "eslint": "^8.57.0",
     "eslint-config-next": "15.0.0-rc.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.35.0",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "postcss": "^8",
+    "prettier": "3.3.3",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5.5.4",
+    "typescript-eslint": "^8.3.0"
   }
 }
