--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
-    "bcrypt": "^5.1.1",
+    "@vercel/postgres": "^0.9.0",
+    "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
+    "crypto": "^1.0.1",
     "husky": "^9.1.5",
     "lint-staged": "^15.2.9",
     "next": "15.0.0-rc.0",
@@ -22,7 +24,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
-    "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/eslint__js": "^8.42.3",
     "@types/node": "^20",
     "@types/react": "npm:types-react@rc",
