--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.1.5",
     "@vercel/postgres": "^0.9.0",
+    "ably": "^2.3.1",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
     "crypto": "^1.0.1",
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@types/ably": "^1.0.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/eslint__js": "^8.42.3",
     "@types/node": "^20",
